# F-I-T

./: CHANGELOG.md  CITATION.cff  CITATION_PHASE_II.md  FUNDING.yml  PHASE_II_QUICKSTART.md  README.draft.md  README.legacy_landing.md  README.md  README.zh_cn.md  RELEASE_NOTES_PHASE_II.md  est_equivalence_and_coherence_report.md  est_preregistration_template.yaml
books/: README.md
experiments/grokking_hard_indicators_v0_2/code/: README.md  pyproject.toml  requirements.txt
experiments/grokking_hard_indicators_v0_2/code/protocol/: estimator_spec.dev.yaml  estimator_spec.v0_2.yaml  estimator_spec.v0_2_1.yaml  estimator_spec.yaml  prereg_template.md  prereg_v0_2.md
experiments/grokking_hard_indicators_v0_2/code/scripts/: summarize_structural_candidates_v0_6.py
experiments/grokking_hard_indicators_v0_2/code/src/grokking/analysis/: evaluate_detector.py  evaluate_suite.py  events.py  fpr_tradeoff_curves.py  metrics.py  report_table.py  score.py
experiments/grokking_hard_indicators_v0_2/code/src/grokking/datasets/: modular_addition.py
experiments/grokking_hard_indicators_v0_2/code/src/grokking/estimators/: cleanup_correction.py  spectral.py
experiments/grokking_hard_indicators_v0_2/code/src/grokking/models/: tiny_transformer.py
experiments/grokking_hard_indicators_v0_2/code/src/grokking/runner/: checkpoint.py  device.py  sweep.py  train.py
experiments/grokking_hard_indicators_v0_2/code/src/grokking/utils/: config.py  jsonl.py  seed.py
experiments/grokking_hard_indicators_v0_2/code/src/grokking_fit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+1727 files in other folders)
